# pushk2pre1move

./: CMakeLists.txt  README.md
cfg/: cl_filter_a.yaml  cl_filter_ar.yaml  cl_filter_b.yaml  cl_filter_br.yaml  zx_filter_ar.yaml  zx_filter_b.yaml  zx_filter_br.yaml
examples/: check.sh  compress.sh  example6.scr  main.sh  prepare.sh  report.sh  report_check.sh  results.txt  results2.txt  transform.sh
examples/check/: example1.scr  example4br.scr
examples_trix/: 7z_results.txt  all_results.txt  arj_results.txt  bzip2_results.txt  compress_all.sh  create_report.sh  gzip_results.txt  lzma_results.txt  original_names.txt  rar_results.txt  transform_all.sh  trix10.scr  trix10a.scr  trix10b.scr  trix11.scr  trix11a.scr  trix11b.scr  trix12.scr  trix12a.scr  trix12b.scr  trix13.scr  trix13a.scr  trix13b.scr  trix14.scr  trix14a.scr  trix14b.scr  trix15.scr  trix15a.scr  trix15b.scr  trix16.scr  trix16a.scr  trix16b.scr  trix17.scr  trix17a.scr  trix17b.scr  trix18.scr  trix18a.scr  trix18b.scr  trix19.scr  trix19a.scr  (+81 more)
examples_trix/7z/: trix1.7z  trix10.7z  trix10a.7z  trix10b.7z  trix11.7z  trix11a.7z  trix11b.7z  trix12.7z  trix12a.7z  trix12b.7z  trix13.7z  trix13a.7z  trix13b.7z  trix14.7z  trix14a.7z  trix14b.7z  trix15.7z  trix15a.7z  trix15b.7z  trix16.7z  trix16a.7z  trix16b.7z  trix17.7z  trix17a.7z  trix17b.7z  trix18.7z  trix18a.7z  trix18b.7z  trix19.7z  trix19a.7z  trix19b.7z  trix1a.7z  trix1b.7z  trix2.7z  trix20.7z  trix20a.7z  trix20b.7z  (+74 more)
misc/: vhplatform.hpp
mods/: cntblkmv.hpp  membuff.hpp  yinput.hpp
src/: allerrs.hpp  main.cpp  tmp.cpp
(+738 files in other folders)
